@@ -146,7 +146,7 @@ function ItemSelection:init()
                 },
                 widgets.Panel{
                     frame={l=0, t=3, r=0, b=0},
-                    frame_style=gui.INTERIOR_FRAME,
+                    frame_style=gui.FRAME_INTERIOR,
                     subviews={
                         widgets.FilteredList{
                             view_id='flist',
